projects/examples/source/02.39.cpp
//////////////////////////////////////////////////////////

// chapter : Basics of Programming

//////////////////////////////////////////////////////////

// section : Functional Programming

//////////////////////////////////////////////////////////

// content : Function Overloading
//
// content : Signatures
//
// content : Polymorphism

//////////////////////////////////////////////////////////

#include <print>

//////////////////////////////////////////////////////////

void test(int              ) { std::print("test (1)\n"); }

void test(int, int         ) { std::print("test (2)\n"); }

void test(int, int, int = 0) { std::print("test (3)\n"); }

//////////////////////////////////////////////////////////

int main()
{
    test(1      ); // support : compiler-explorer.com

//  test(1, 2   ); // error

    test(1, 2, 3); // support : compiler-explorer.com
}

//////////////////////////////////////////////////////////